--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,13 +6,14 @@
 
   {% include head.html %}
 
-  <body class="themed">
+  <body>
 
     {% include sidebar.html %}
 
-    <main class="content container">
+    <main class="main">
       {{ content }}
     </main>
 
   </body>
+
 </html>
